# agentx_proxy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md  test-r2.sh
.github/workflows/: ci.yml  release.yml
agentc/: Cargo.toml
agentc/src/: config.rs  error.rs  executor.rs  main.rs  resolver.rs  router.rs  routes.rs  session.rs
agentc/src/agentx/: claude.rs  claude_routes.rs  mod.rs
agentc/src/handlers/: proxy.rs  session.rs
agentc/src/mcp/: permissions.rs
agents/: Cargo.toml
agents/src/: main.rs
arp-client/: Cargo.toml
arp-client/src/: config.rs  executor.rs  main.rs  routes.rs  session.rs
arp-client/src/agentx/: claude.rs  claude_routes.rs  codex.rs  codex_routes.rs  gemini.rs  gemini_routes.rs  mod.rs  routes_common.rs  types.rs
arp-client/src/handlers/: filesystem.rs  mod.rs  proxy.rs  session.rs
arp-client/src/mcp/: mod.rs  permissions.rs
arp-common/: Cargo.toml
arp-common/src/: http.rs  lib.rs
arp-server/: Cargo.toml
arp-server/src/: main.rs
common/: Cargo.toml
common/src/: http.rs  lib.rs
nginx/: agents.conf
scripts/: INDEX.md  Makefile  README.md  README_zh.md  benchmark.sh  config.env  install-client.ps1  install-client.sh  install.sh  quick_demo.sh  setup_demo.sh  test_scenarios.sh
