[workspace]
members = [
    "arp-common",
    "arp-server",
    "arp-client",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
which = "7"
urlencoding = "2.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3