
[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
urlencoding = { workspace = true }
socket2 = "0.5"
libc = "0.2"
dashmap = "6.1"
crossbeam = "0.8"
